# vscode-example

./: CMakeLists.txt  Dockerfile  README.md  environment.yml  vscode-example.code-workspace
build-debug/: .fuse_hidden0000726a00000035  CMakeCache.txt  Makefile  cmake_install.cmake  my_app
dendron/: dendron.yml
dendron/notes/: example.journal.2022.09.29.md  example.journal.2022.09.md  example.journal.2022.md  example.journal.md  example.md  meet.2022.09.29.md  root.md  ssh_configurations.md  templates.md  templates.meet.md
jupyter/: sample.ipynb
python/: hello_world.py  inc_dec.py  test_pytest.py  test_unittest.py
src/: app.cpp  math_stuff.cpp  math_stuff.hpp
